Preparing to add the Qwen2 support.